Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/target/NotTypeUse.out
NotTypeUse.java:13:3: compiler.err.annotation.type.not.applicable
1 error
